Finish styling side menu

--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
         <div class="site-container">
             <div class="side-menu">
                 <div class="logo">
-                    <img src="" alt="">
-                    <h1></h1>
+                    <img src="./images/square-wave.png" alt="Company logo">
+                    <h1>Dashboard</h1>
                 </div>
                 <div class="options">
                     <ul>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/home.png" alt="Home icon">
+                            <a href="./index.html">Home</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/face-man-profile.png" alt="Profile icon">
+                            <a href="./index.html">Profile</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/message-reply-text-outline.png" alt="Message icon">
+                            <a href="./index.html">Messages</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/history.png" alt="History icon">
+                            <a href="./index.html">History</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/calendar-check.png" alt="Tasks icon">
+                            <a href="./index.html">Tasks</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/account-group.png" alt="Communities icon">
+                            <a href="./index.html">Communities</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/cog.png" alt="Settings icon">
+                            <a href="./index.html">Settings</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/face-agent.png" alt="Support icon">
+                            <a href="./index.html">Support</a>
                         </li>
                         <li>
-                            <img src="" alt="">
-                            <span></span>
+                            <img src="./images/lock.png" alt="Privacy icon">
+                            <a href="./index.html">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -60,11 +60,11 @@
             <div class="header-section">
                 <div class="search-bar-section">
                     <div>
-                        <img src="" alt="">
+                        <img src="./images/magnify.png" alt="Search icon">
                         <input type="text">
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="./images/bell-ring.png" alt="Bell icon">
                         <img src="" alt="">
                         <span></span>
                     </div>
