Complete header section

--- a/index.html
+++ b/index.html
@@ -58,31 +58,26 @@
             </div>
 
             <div class="header-section">
-                <div class="search-bar-section">
+                <div class="search-bar">
+                    <img src="./images/magnify.png" alt="Search icon">
+                    <input type="text">
+                </div>
+                <div class="profile-options">
+                    <img src="./images/bell-ring-outline.png" alt="Bell icon">
+                    <img src="./images/blank-pp.png" alt="Blank profile picture">
+                    <span><strong>Morgan Oakley</strong></span>
+                </div>
+                <div class="greetings">
+                    <img src="./images/blank-pp.png" alt="Blank profile picture">
                     <div>
-                        <img src="./images/magnify.png" alt="Search icon">
-                        <input type="text">
-                    </div>
-                    <div>
-                        <img src="./images/bell-ring.png" alt="Bell icon">
-                        <img src="" alt="">
-                        <span></span>
+                        <p><strong>Hi there,</strong></p>
+                        <p><strong>Morgan Oakley (@morgan)</strong></p>
                     </div>
                 </div>
-
-                <div class="sub-header">
-                    <div class="greetings">
-                        <img src="" alt="">
-                        <div>
-                            <p></p>
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="option-buttons">
-                        <button type="button"></button>
-                        <button type="button"></button>
-                        <button type="button"></button>
-                    </div>
+                <div class="option-buttons">
+                    <button type="button">New</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
                 </div>
             </div>
 
