--- a/index.html
+++ b/index.html
@@ -85,73 +85,69 @@
                 <div class="cards-container">
                     <div class="card">
                         <div class="card-content">
-                            <h2></h2>
-                            <p></p>
+                            <h2>Super Cool Project</h2>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         </div>
                         <div class="bookmark-options">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/heart-outline.png" alt="Favourite Icon">
+                            <img src="./images/eye.png" alt="Watch icon">
+                            <img src="./images/export-variant.png" alt="Share icon">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-content">
-                            <h2></h2>
-                            <p></p>
+                            <h2>Less Cool Project</h2>
+                            <p>Risus commodo viverra maecenas accumsan lacus vel. Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Nec sagittis aliquam malesuada bibendum arcu vitae elementum.</p>
                         </div>
                         <div class="bookmark-options">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/heart-outline.png" alt="Favourite Icon">
+                            <img src="./images/eye.png" alt="Watch icon">
+                            <img src="./images/export-variant.png" alt="Share icon">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-content">
-                            <h2></h2>
-                            <p></p>
+                            <h2>Impossible App</h2>
+                            <p>Amet purus gravida quis blandit turpis cursus. Enim facilisis gravida neque convallis a cras semper. Dapibus ultrices in iaculis nunc sed augue.</p>
                         </div>
                         <div class="bookmark-options">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/heart-outline.png" alt="Favourite Icon">
+                            <img src="./images/eye.png" alt="Watch icon">
+                            <img src="./images/export-variant.png" alt="Share icon">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-content">
-                            <h2></h2>
-                            <p></p>
+                            <h2>Easy Peasy App</h2>
+                            <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse interdum consectetur libero. Etiam erat velit scelerisque in dictum non consectetur a. Amet facilisis magna etiam tempor orci. Ipsum nunc aliquet bibendum</p>
                         </div>
                         <div class="bookmark-options">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/heart-outline.png" alt="Favourite Icon">
+                            <img src="./images/eye.png" alt="Watch icon">
+                            <img src="./images/export-variant.png" alt="Share icon">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-content">
-                            <h2></h2>
-                            <p></p>
+                            <h2>Ad Blocker</h2>
+                            <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse interdum consectetur libero. Etiam erat velit scelerisque in dictum non consectetur a.</p>
                         </div>
                         <div class="bookmark-options">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/heart-outline.png" alt="Favourite Icon">
+                            <img src="./images/eye.png" alt="Watch icon">
+                            <img src="./images/export-variant.png" alt="Share icon">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-content">
-                            <h2></h2>
-                            <p></p>
+                            <h2>Money Maker</h2>
+                            <p>Ullamcorper morbi tincidunt ornare massa eget egestas purus. Dis parturient montes nascetur ridiculus. Euismod quis viverra nibh cras pulvinar mattis. Mattis rhoncus urna neque viverra justo nec. Morbi leo urna</p>
                         </div>
                         <div class="bookmark-options">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/heart-outline.png" alt="Favourite Icon">
+                            <img src="./images/eye.png" alt="Watch icon">
+                            <img src="./images/export-variant.png" alt="Share icon">
                         </div>
-                    </div>
-                    <div class="card">
-                        <div></div>
-                        <div></div>
                     </div>
                 </div>
             </div>
