Fix html markup/arrangment

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             </div>
 
             <div class="grid-section">
-                <div class="cards-container">
+                <!-- <div class="your-projects"><strong>Your Projects</strong></div> -->
+                <div class="projects-container">
                     <div class="card">
                         <div class="card-content">
                             <h2>Super Cool Project</h2>
@@ -147,6 +148,57 @@
                             <img src="./images/heart-outline.png" alt="Favourite Icon">
                             <img src="./images/eye.png" alt="Watch icon">
                             <img src="./images/export-variant.png" alt="Share icon">
+                        </div>
+                    </div>
+                </div>
+                <div class="side-cards">
+                    <div><strong>Announcements</strong></div>
+                    <div class="announcements">
+                        <div>
+                            <p><strong>Site Maintenance</strong></p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ipsa cupiditate unde...</p>
+                        </div>
+                        <hr>
+                        <div>
+                            <p><strong>Community Share Day</strong></p>
+                            <p>Vel rem, ipsa officia commodi veniam excepturi, ex, molestias perspiciatis consequuntur sint error voluptatem...</p>
+                        </div>
+                        <hr>
+                        <div>
+                            <p><strong>Updated Privacy Policy</strong></p>
+                            <p>Accusamus nihil dicta, quisquam, similique doloremque unde quidem quaerat a possimus eum deleniti libero...</p>
+                        </div>
+                    </div>
+
+                    <div><strong>Trending</strong></div>
+                    <div class="people">
+                        <div>
+                            <img src="./images/blank-pp.png" alt="A blank profile picture">
+                            <div class="ats">
+                                <span><strong>@tegan</strong></span>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./images/blank-pp.png" alt="A blank profile picture">
+                            <div class="ats">
+                                <span><strong>@morgan</strong></span>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./images/blank-pp.png" alt="A blank profile picture">
+                            <div class="ats">
+                                <span><strong>@kendall</strong></span>
+                                <p>Life Changing App</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./images/blank-pp.png" alt="A blank profile picture">
+                            <div class="ats">
+                                <span><strong>@alex</strong></span>
+                                <p>No Traffic Maker</p>
+                            </div>
                         </div>
                     </div>
                 </div>
