--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     <button type="button">Share</button>
                 </div>
             </div>
-
+            
             <div class="grid-section">
-                <!-- <div class="your-projects"><strong>Your Projects</strong></div> -->
+                <div><strong>Projects</strong></div>
                 <div class="projects-container">
                     <div class="card">
                         <div class="card-content">
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <div class="side-cards">
-                    <div><strong>Announcements</strong></div>
+                    <div class="first-ann"><strong>Announcements</strong></div>
                     <div class="announcements">
                         <div>
                             <p><strong>Site Maintenance</strong></p>
